# routes/api/v1/__init__.py
@@ -1,0 +1,5 @@
+from flask import Blueprint
+
+api_v1 = Blueprint('api_v1', __name__, url_prefix='/api/v1')
+
+from . import users, exercises, auth, leaderboard 
